2011-03-03	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig-qemu.h: Add missing endif.

2010-12-08     Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* networkconfig.h, networkconfig-qemu.h, networkconfig-icecube.h,
	networkconfig-mpc8313erdb.h: Loop back interface will be initialized
	now during normal initialization via rtems_bsdnet_initialize_network().

2010-02-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ttcp/rtems_ttcp.c: Update timeval usage.

2009-11-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* VERSION: Updated to network-demos-4.9.3.

2009-05-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig-qemu.h: Now works on qemu with fxp driver in RTEMS, the
	newer version in libbsdport, and on the real NIC in the Winsystems PC
	in RTEMS Lab.

2009-02-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig-qemu.h: Add option for qemu to use PCI i82551 NIC.

2008-09-18	Joel Sherrill <joel.sherrill@OARcorp.com>

	* networkconfig.h: Revert previous patch. Use loopback configuration
	only.

2008-09-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig-mpc8313erdb.h, networkconfig.h: Rename STACK_CHECKER_ON
	to more appropriate CONFIGURE_STACK_CHECKER_ENABLED.

2008-08-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig-mpc8313erdb.h: New file.

2008-08-20	Joel Sherrill <joel.sherrill@OARcorp.com>

	* networkconfig-qemu.h, networkconfig.h: Add missing initializers.

2008-02-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig-icecube.h, networkconfig-qemu.h, networkconfig.h:
	Updated to include new fields and expand tabs.

2007-09-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Added telnetd test.

2007-09-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* networkconfig-icecube.h: Fix MAC address and typo.

2007-09-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Add mcast.

2007-09-14	Joel Sherrill <joel.sherrill@oarcorp.com>
